SS-14 Menu layout added (except for pin list)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,9 +51,7 @@ javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -74,6 +72,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
