Added photos for user's account

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -11,117 +11,56 @@ Home=Home
 Maintenance=Maintenance
 AppName=StreetSmart
 
-PinCreated=Pin was successfully created.
-PinUpdated=Pin was successfully updated.
-PinDeleted=Pin was successfully deleted.
-CreatePinTitle=Create New Pin
-CreatePinSaveLink=Save
-CreatePinShowAllLink=Show All Pin Items
-CreatePinIndexLink=Index
-CreatePinLabel_id=Id:
-CreatePinRequiredMessage_id=The Id field is required.
-CreatePinTitle_id=Id
-CreatePinLabel_latitude=Latitude:
-CreatePinTitle_latitude=Latitude
-CreatePinLabel_longitude=Longitude:
-CreatePinTitle_longitude=Longitude
-CreatePinLabel_title=Title:
-CreatePinTitle_title=Title
-CreatePinLabel_description=Description:
-CreatePinTitle_description=Description
-CreatePinLabel_anonymous=Anonymous:
-CreatePinTitle_anonymous=Anonymous
-CreatePinLabel_type=Type:
-CreatePinTitle_type=Type
-CreatePinLabel_upvotes=Upvotes:
-CreatePinTitle_upvotes=Upvotes
-CreatePinLabel_downvotes=Downvotes:
-CreatePinTitle_downvotes=Downvotes
-CreatePinLabel_reports=Reports:
-CreatePinTitle_reports=Reports
-CreatePinLabel_timePosted=TimePosted:
-CreatePinTitle_timePosted=TimePosted
-CreatePinLabel_userId=UserId:
-CreatePinTitle_userId=UserId
-EditPinTitle=Edit Pin
-EditPinSaveLink=Save
-EditPinViewLink=View
-EditPinShowAllLink=Show All Pin Items
-EditPinIndexLink=Index
-EditPinLabel_id=Id:
-EditPinRequiredMessage_id=The Id field is required.
-EditPinTitle_id=Id
-EditPinLabel_latitude=Latitude:
-EditPinTitle_latitude=Latitude
-EditPinLabel_longitude=Longitude:
-EditPinTitle_longitude=Longitude
-EditPinLabel_title=Title:
-EditPinTitle_title=Title
-EditPinLabel_description=Description:
-EditPinTitle_description=Description
-EditPinLabel_anonymous=Anonymous:
-EditPinTitle_anonymous=Anonymous
-EditPinLabel_type=Type:
-EditPinTitle_type=Type
-EditPinLabel_upvotes=Upvotes:
-EditPinTitle_upvotes=Upvotes
-EditPinLabel_downvotes=Downvotes:
-EditPinTitle_downvotes=Downvotes
-EditPinLabel_reports=Reports:
-EditPinTitle_reports=Reports
-EditPinLabel_timePosted=TimePosted:
-EditPinTitle_timePosted=TimePosted
-EditPinLabel_userId=UserId:
-EditPinTitle_userId=UserId
-ViewPinTitle=View
-ViewPinDestroyLink=Destroy
-ViewPinEditLink=Edit
-ViewPinCreateLink=Create New Pin
-ViewPinShowAllLink=Show All Pin Items
-ViewPinIndexLink=Index
-ViewPinLabel_id=Id:
-ViewPinTitle_id=Id
-ViewPinLabel_latitude=Latitude:
-ViewPinTitle_latitude=Latitude
-ViewPinLabel_longitude=Longitude:
-ViewPinTitle_longitude=Longitude
-ViewPinLabel_title=Title:
-ViewPinTitle_title=Title
-ViewPinLabel_description=Description:
-ViewPinTitle_description=Description
-ViewPinLabel_anonymous=Anonymous:
-ViewPinTitle_anonymous=Anonymous
-ViewPinLabel_type=Type:
-ViewPinTitle_type=Type
-ViewPinLabel_upvotes=Upvotes:
-ViewPinTitle_upvotes=Upvotes
-ViewPinLabel_downvotes=Downvotes:
-ViewPinTitle_downvotes=Downvotes
-ViewPinLabel_reports=Reports:
-ViewPinTitle_reports=Reports
-ViewPinLabel_timePosted=TimePosted:
-ViewPinTitle_timePosted=TimePosted
-ViewPinLabel_userId=UserId:
-ViewPinTitle_userId=UserId
-ListPinTitle=List
-ListPinEmpty=(No Pin Items Found)
-ListPinDestroyLink=Destroy
-ListPinEditLink=Edit
-ListPinViewLink=View
-ListPinCreateLink=Create New Pin
-ListPinIndexLink=Index
-ListPinTitle_id=Id
-ListPinTitle_latitude=Latitude
-ListPinTitle_longitude=Longitude
-ListPinTitle_title=Title
-ListPinTitle_description=Description
-ListPinTitle_anonymous=Anonymous
-ListPinTitle_type=Type
-ListPinTitle_upvotes=Upvotes
-ListPinTitle_downvotes=Downvotes
-ListPinTitle_reports=Reports
-ListPinTitle_timePosted=TimePosted
-ListPinTitle_userId=UserId
+PhotoCreated=Photo was successfully created.
+PhotoUpdated=Photo was successfully updated.
+PhotoDeleted=Photo was successfully deleted.
+CreatePhotoTitle=Create New Photo
+CreatePhotoSaveLink=Save
+CreatePhotoShowAllLink=Show All Photo Items
+CreatePhotoIndexLink=Index
+CreatePhotoLabel_id=Id:
+CreatePhotoRequiredMessage_id=The Id field is required.
+CreatePhotoTitle_id=Id
+CreatePhotoLabel_extension=Extension:
+CreatePhotoRequiredMessage_extension=The Extension field is required.
+CreatePhotoTitle_extension=Extension
+CreatePhotoLabel_userId=UserId:
+CreatePhotoTitle_userId=UserId
+EditPhotoTitle=Edit Photo
+EditPhotoSaveLink=Save
+EditPhotoViewLink=View
+EditPhotoShowAllLink=Show All Photo Items
+EditPhotoIndexLink=Index
+EditPhotoLabel_id=Id:
+EditPhotoRequiredMessage_id=The Id field is required.
+EditPhotoTitle_id=Id
+EditPhotoLabel_extension=Extension:
+EditPhotoRequiredMessage_extension=The Extension field is required.
+EditPhotoTitle_extension=Extension
+EditPhotoLabel_userId=UserId:
+EditPhotoTitle_userId=UserId
+ViewPhotoTitle=View
+ViewPhotoDestroyLink=Destroy
+ViewPhotoEditLink=Edit
+ViewPhotoCreateLink=Create New Photo
+ViewPhotoShowAllLink=Show All Photo Items
+ViewPhotoIndexLink=Index
+ViewPhotoLabel_id=Id:
+ViewPhotoTitle_id=Id
+ViewPhotoLabel_extension=Extension:
+ViewPhotoTitle_extension=Extension
+ViewPhotoLabel_userId=UserId:
+ViewPhotoTitle_userId=UserId
+ListPhotoTitle=List
+ListPhotoEmpty=(No Photo Items Found)
+ListPhotoDestroyLink=Destroy
+ListPhotoEditLink=Edit
+ListPhotoViewLink=View
+ListPhotoCreateLink=Create New Photo
+ListPhotoIndexLink=Index
+ListPhotoTitle_id=Id
+ListPhotoTitle_extension=Extension
+ListPhotoTitle_userId=UserId
 UserCreated=User was successfully created.
 UserUpdated=User was successfully updated.
 UserDeleted=User was successfully deleted.
